# goit-python-web-hw7-mysql

./: alembic.ini  connect_db.py  create_db.py  create_db_orm.py  delete_rows.py  fill_data.py  models.py  pyproject.toml  seeds.py  test.py
alembic/: env.py
alembic/versions/: 00a0f1a083c3_init.py  58ba639258c0_init.py  7a22829e6f97_init.py  8b3b43616d26_init.py  c86d436f22f5_init.py
query/: query_1.py  query_10.py  query_11.py  query_2.py  query_3.py  query_5.py  query_6.py  query_8.py
